--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,29 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB}
+    restart: always
+    networks:
+      - pf-net
+
+  backend:
+  # FIXME: change build to backend image on deploy
+    build: .
+    container_name: pf-backend
+    ports:
+      - ${BACK_END_PORT}:3000
+    volumes:
+      - ./logs:/app/logs
+    environment:
+      - TZ=Asia/Bangkok
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - POSTGRES_HOST=pf-db
+
+      - BACK_END_PORT=${BACK_END_PORT}
+    depends_on:
+      - db
     networks:
       - pf-net
 volumes:
