--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "start": "node ./dist/src/index.js",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+    "db:generate": "npx drizzle-kit generate",
+    "db:migrate": "npx drizzle-kit migrate"
   },
   "repository": {
     "type": "git",
@@ -24,13 +24,13 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
+    "drizzle-kit": "^0.31.4",
     "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "@types/pg": "^8.15.5",
-    "drizzle-kit": "^0.31.4",
     "postgres": "^3.4.7",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
