--- a/package.json
+++ b/package.json
@@ -1,41 +1,55 @@
 {
-  "name": "preflight-backend",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "build": "tsc && tsc-alias",
-    "start": "node ./dist/src/index.js",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+  "type": "module",
+  "license": "AGPL-version-3.0",
+  "private": false,
+  "engines": {
+    "node": ">= 14.0.0",
+    "npm": ">= 6.0.0"
   },
+  "homepage": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/261497-fullstackdev-68/preflight-backend.git"
+    "url": ""
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/261497-fullstackdev-68/preflight-backend/issues"
+  "bugs": "",
+  "keywords": [],
+  "author": {
+    "name": "",
+    "email": "",
+    "url": ""
   },
-  "homepage": "https://github.com/261497-fullstackdev-68/preflight-backend#readme",
-  "type": "module",
+  "contributors": [],
+  "scripts": {
+    "dev": "",
+    "test": ""
+  },
   "dependencies": {
+    "@tsconfig/node-lts": "^22.0.2",
+    "@tsconfig/node-ts": "^23.6.1",
+    "cors": "^2.8.5",
+    "debug": "^4.4.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.1.0",
-    "@types/pg": "^8.15.5",
-    "drizzle-kit": "^0.31.4",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1",
     "postgres": "^3.4.7",
-    "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
-    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/debug": "^4.1.12",
+    "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.2.0",
+    "cross-env": "^10.0.0",
+    "drizzle-kit": "^0.31.4",
+    "nodemon": "^3.1.10"
   }
 }
