--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,6 @@ services:
       - pf-net
 
   backend:
-  # FIXME: change build to backend image on deploy
     build: .
     container_name: pf-backend
     ports:
@@ -33,6 +32,7 @@ services:
       - POSTGRES_PORT=${POSTGRES_PORT}
       - POSTGRES_HOST=pf-db
       - BACK_END_PORT=${BACK_END_PORT}
+    command: sh -c "npm run db:migrate && npm run start"
     depends_on:
       - db
     networks:
