--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "type": "module",
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.4",
@@ -44,4 +45,3 @@
     "typescript": "^5.9.2"
   }
 }
-
