--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "seed": "node ./dist/db/seeder.js",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "npx drizzle-kit migrate",
-    "test": "cypress open"
+    "test": "cypress open",
+    "dev": "vite",
+    "cy:open": "start-server-and-test dev http://localhost:5173 test"
   },
   "repository": {
     "type": "git",
@@ -36,11 +38,13 @@
     "pnpm": "^10.14.0"
   },
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^7.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.2.1",
     "@types/pg": "^8.15.5",
     "postgres": "^3.4.7",
+    "start-server-and-test": "^2.0.13",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
