--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     // See also https://aka.ms/tsconfig/module
     "module": "NodeNext",
     "target": "ES2020",
-    "types": ["node","cypress"],
+    "types": ["node"],
     "moduleResolution": "NodeNext",
     // For nodejs:
     // "lib": ["esnext"],
@@ -47,5 +47,5 @@
       "@db/*": ["./db/*"]
     }
   },
-  "include": ["src/**/*", "db/**/*", "cypress/**/*"],
+  "include": ["src/**/*", "db/**/*"],
 }
